--- a/index.html
+++ b/index.html
@@ -11,12 +11,40 @@
     body {
       background-color: salmon;
     }
+
+    img {
+      position: fixed;
+      top: 50vh;
+      left: 0;
+    }
+
+    p {
+      color: red;
+    }
   </style>
+  <script>
+    const march11EpochSeconds = Number(new Date(2023, 2, 11));
+    const currentEpochSeconds = Date.now();
+    let initialSeconds = march11EpochSeconds - currentEpochSeconds;
+
+    const updateTimer = (time) => {
+      const march11 = document.getElementById('march-11');
+      march11.innerHTML = time;
+    };
+
+    const decrementSeconds = () => {
+      initialSeconds -= 1;
+    }
+
+    setInterval(() => {
+      updateTimer(initialSeconds)
+      decrementSeconds();
+    }, 1)
+  </script>
 </head>
 <body>
-  <p id="shrug">¯\_(ツ)_/¯</p>
-  <button onclick="handleCopyClick()">Copy</button>
-  <p id="copied-alert">Copied!</p>
+  <img src="https://media.discordapp.net/attachments/260935233849917440/1034624554712174642/unknown.png">
+  <p id="march-11"></p>
 </body>
 </html>
 
