--- a/index.html
+++ b/index.html
@@ -14,22 +14,33 @@
 
     img {
       position: fixed;
-      top: 50vh;
+      top: 0;
       left: 0;
     }
 
     p {
       color: red;
     }
+
+    a {
+      color: salmon;
+    }
   </style>
-  <script>
-    const march11EpochSeconds = Number(new Date(2023, 2, 11));
+</head>
+<body>
+  <img id="red-herring" onclick="reveal()" src="https://media.discordapp.net/attachments/260935233849917440/1034624554712174642/unknown.png">
+  <p id="march-19"></p>
+  <video id="the-truth" width="400">
+    <source src="https://cdn.discordapp.com/attachments/795506213478858822/1010230138492948540/redditsave.com_prepare-e712wbgtug381-240.mp4" type="video/mp4">
+  </video>
+  <script defer>
+    const march19EpochSeconds = Number(new Date(2023, 2, 19));
     const currentEpochSeconds = Date.now();
-    let initialSeconds = march11EpochSeconds - currentEpochSeconds;
+    let initialSeconds = march19EpochSeconds - currentEpochSeconds;
 
     const updateTimer = (time) => {
-      const march11 = document.getElementById('march-11');
-      march11.innerHTML = time;
+      const march19 = document.getElementById('march-19');
+      march19.innerHTML = time;
     };
 
     const decrementSeconds = () => {
@@ -39,12 +50,31 @@
     setInterval(() => {
       updateTimer(initialSeconds)
       decrementSeconds();
-    }, 1)
+    }, 1);
+
+    const redHerring = document.getElementById('red-herring');
+    let originalTopValue = Number(redHerring.style.top);
+
+    const playVideo = () => {
+      const vid = document.getElementById('the-truth');
+      console.log({ vid })
+      try {
+        vid.play();
+      } catch (e) {
+        console.log({ e })
+      }
+    }
+
+    const reveal = () => {
+      setInterval(() => {
+        console.log(`${originalTopValue + 1}`)
+        originalTopValue += 1;
+        redHerring.style.setProperty('top', `${originalTopValue}px`);
+      }, 1);
+
+      playVideo();
+    }
   </script>
-</head>
-<body>
-  <img src="https://media.discordapp.net/attachments/260935233849917440/1034624554712174642/unknown.png">
-  <p id="march-11"></p>
 </body>
 </html>
 
