--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>Welcome : ^ )</title>
+  <title>Gabaghoul Information</title>
   <meta name="description" content="Learn the truth.">
   <meta name="keywords" content="saucy ragu denies gabaghoul">
-  <link type="image/png" sizes="16x16" rel="icon" href="16.png">
-  <link type="image/png" sizes="32x32" rel="icon" href="32.png">
-  <link type="image/png" sizes="96x96" rel="icon" href="96.png">
   <style type="text/css">
     body {
       background-color: salmon;
@@ -68,7 +65,7 @@
     const reveal = () => {
       setInterval(() => {
         console.log(`${originalTopValue + 1}`)
-        originalTopValue += 1;
+        originalTopValue += 0.01;
         redHerring.style.setProperty('top', `${originalTopValue}px`);
       }, 1);
 
