--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       position: fixed;
       top: 0;
       left: 0;
-      width: 50vw;
+      width: 100vw;
+      height: 100vh;
     }
 
     p {
